--- a/helm-configs/tempo-values.yaml
+++ b/helm-configs/tempo-values.yaml
@@ -4,10 +4,15 @@ nameOverride: ""
 # -- Overrides the chart's computed fullname
 fullnameOverride: ""
 
+# -- Define the amount of instances
 replicas: 1
+
+# -- Annotations for the StatefulSet
+annotations: {}
+
 tempo:
   repository: grafana/tempo
-  tag: 1.5.0
+  tag: 2.0.0
   pullPolicy: IfNotPresent
   ## Optionally specify an array of imagePullSecrets.
   ## Secrets must be manually created in the namespace.
@@ -27,8 +32,8 @@ tempo:
 
   memBallastSizeMbs: 1024
   multitenancyEnabled: false
-  # -- If true, enables Tempo's native search
-  searchEnabled: false
+  # -- If true, Tempo will report anonymous usage data about the shape of a deployment to Grafana Labs
+  reportingEnabled: true
   metricsGenerator:
     # -- If true, enables Tempo's metrics generator (https://grafana.com/docs/tempo/next/metrics-generator/)
     enabled: false
@@ -99,6 +104,8 @@ tempo:
   extraArgs: {}
   # -- Environment variables to add
   extraEnv: []
+  # -- Environment variables from secrets or configmaps to add to the ingester pods
+  extraEnvFrom: []
   # -- Volume mounts to add
   extraVolumeMounts: []
   # - name: extra-volume
@@ -110,11 +117,11 @@ tempo:
 # @default -- Dynamically generated tempo configmap
 config: |
     multitenancy_enabled: {{ .Values.tempo.multitenancyEnabled }}
-    search_enabled: {{ .Values.tempo.searchEnabled }}
-    metrics_generator_enabled: {{ .Values.tempo.metricsGenerator.enabled }}
+    usage_report:
+      reporting_enabled: {{ .Values.tempo.reportingEnabled }}
     compactor:
       compaction:
-        compacted_block_retention: {{ .Values.tempo.retention }}
+        block_retention: {{ .Values.tempo.retention }}
     distributor:
       receivers:
         {{- toYaml .Values.tempo.receivers | nindent 8 }}
@@ -143,7 +150,7 @@ config: |
 
 tempoQuery:
   repository: grafana/tempo-query
-  tag: 1.5.0
+  tag: 2.0.0
   pullPolicy: IfNotPresent
   ## Optionally specify an array of imagePullSecrets.
   ## Secrets must be manually created in the namespace.
@@ -154,6 +161,15 @@ tempoQuery:
 
   # -- if False the tempo-query container is not deployed
   enabled: true
+
+  resources: {}
+  #  requests:
+  #    cpu: 1000m
+  #    memory: 4Gi
+  #  limits:
+  #    cpu: 2000m
+  #    memory: 6Gi
+
   ## Additional container arguments
   extraArgs: {}
   # -- Environment variables to add
@@ -188,6 +204,8 @@ serviceAccount:
   imagePullSecrets: []
   # -- Annotations for the service account
   annotations: {}
+  # -- Labels for the service account
+  labels: {}
   automountServiceAccountToken: true
 
 service:
