--- a/tools/telegraf/telegraf-ds-master.yaml
+++ b/tools/telegraf/telegraf-ds-master.yaml
@@ -32,6 +32,7 @@ data:
    [[outputs.prometheus_client]]
          ## Address to listen on.
          listen = ":9126"
+         collectors_exclude = ["gocollector", "process"]
 
    [[inputs.cpu]]
      percpu = true
@@ -56,12 +57,13 @@ data:
    [[inputs.intel_powerstat]]
      package_metrics = ["current_power_consumption", "current_dram_power_consumption", "thermal_design_power"]
      cpu_metrics = ["cpu_frequency", "cpu_temperature"]
-    [[inputs.kube_inventory]]
-      url = "https://$HOSTIP:6443"
-      bearer_token_string = "$TELEGRAF_TOKEN"
-      resource_include = [ "pods", "deployments", "daemonsets", "services", "statefulsets" ]
-      namespace = ""
-      insecure_skip_verify = true
+   [[inputs.kube_inventory]]
+     interval = "60s"
+     url = "https://$HOSTIP:6443"
+     bearer_token_string = "$TELEGRAF_TOKEN"
+     resource_include = [ "pods", "deployments", "daemonsets", "services", "statefulsets" ]
+     namespace = ""
+     insecure_skip_verify = true
     [[inputs.kubernetes]]
       url = "https://$HOSTIP:10250"
       bearer_token_string = "$TELEGRAF_TOKEN"
