--- a/tools/kafka-consumers/kc-nm-deployment.yaml
+++ b/tools/kafka-consumers/kc-nm-deployment.yaml
@@ -20,6 +20,25 @@ spec:
       - name: kc-nm-container
         image: usman476/kafka-consumer-metrics:latest
         imagePullPolicy: "Always"
+        env:
+        - name: "JAR_FILE"
+          value: "kafka-consumer-metrics-0.1.0-jar-with-dependencies.jar"
+        - name: "KAFKA_BROKER"
+          value: "bitnami-kafka-headless.observability.svc.cluster.local:9092"
+        - name: "DATA_STORE"
+          value: "file"
+        - name: "ES_HOSTNAME"
+          value: "es-master-headless.observability.svc.cluster.local"
+        - name: "ES_PORT"
+          value: "9200"
+        - name: "ES_INDEX_RETENTION_DAYS"
+          value: "2d"
+        - name: "PROMETHEUS_PUSHGATEWAY"
+          value: "prometheus-prometheus-pushgateway.observability.svc.cluster.local:9091"
+        - name: "TOPICS_LIST"
+          value: "topics-list.json"
+        command: ["java"]
+        args: ["-jar", "/consumers/kafka-consumer-metrics-0.1.0-jar-with-dependencies.jar"]
         resources:
           requests:
             memory: "128Mi"
