--- a/kubernetes/containerd/config_k8s_cluster.yaml
+++ b/kubernetes/containerd/config_k8s_cluster.yaml
@@ -11,9 +11,10 @@
         mode: 0755
 
     - name: Copy admin.conf to user's kube config
+      become: yes
       copy:
         src: /etc/kubernetes/admin.conf
-        dest: $HOME/.kube/config
+        dest: /home/aida/.kube/config
         remote_src: yes
         owner: aida
 
@@ -23,8 +24,9 @@
       shell: kubeadm token create  --print-join-command
       register: kubernetes_join_command
 
-    - debug:
-      msg: "{{ kubernetes_join_command.stdout }}"
+    - name: Print join command
+      ansible.builtin.debug:
+        msg: "{{ kubernetes_join_command.stdout }}"
 
     - name: Copy join command to local file.
       become: yes
